# AnnotatePropWizard3D

./: .gitignore  .gitmodules  .poetry.lock.swp  README.md  cutie  gui  predictor_example_propa-vos.ipynb  pyproject.toml  run-n_view-vos-XY.py  run-n_view.py  run-vos-sam.py  segment_anything  utils
3dannotatepropwizard/: cutie  gui  mask_prop_example.py  mask_propagation.py  segment_anything  xyroll_example.py  xyroll_prediction.py
3dannotatepropwizard/utils/: inference_core_with_logits.py
annotatepropwizard3d/: __init__.py  cutie  inference_core_with_logits.py  mask_prop_example.py  mask_propagation.py  segment_anything  xyroll_example.py  xyroll_prediction.py
annotatepropwizard3d/cutie/: eval_vos.py  train.py
annotatepropwizard3d/cutie/dataset/: setup_training_data.py  static_dataset.py  vos_dataset.py
annotatepropwizard3d/cutie/inference/: image_feature_store.py  inference_core.py  memory_manager.py  object_manager.py
annotatepropwizard3d/cutie/inference/data/: burst_test_dataset.py  burst_video_reader.py  vos_test_dataset.py
annotatepropwizard3d/cutie/inference/utils/: results_utils.py
annotatepropwizard3d/cutie/model/: aux_modules.py  big_modules.py  cutie.py  group_modules.py  losses.py  modules.py  train_wrapper.py  trainer.py
annotatepropwizard3d/cutie/model/transformer/: object_summarizer.py  object_transformer.py  transformer_layers.py
annotatepropwizard3d/cutie/utils/: get_default_model.py  log_integrator.py  logger.py
annotatepropwizard3d/gui/: gui.py  interaction.py  interactive_utils.py  main_controller.py  reader.py  resource_manager.py
annotatepropwizard3d/segment_anything/: predictor.py
annotatepropwizard3d/submodules/: __init__.py
annotatepropwizard3d/utils/: checkpoint.py  constant.py  image_process.py  inference_core_with_logits.py  visualize.py
deprecated/: run-n_view.py
example/: example.ipynb  mask_propgation.ipynb  xyroll_example.ipynb
notebooks/: predictor_example_nview_mask.ipynb  predictor_example_nview_vos-xy.ipynb  predictor_example_propa-vos-sam-organ.ipynb  predictor_example_propa-vos-sam.ipynb
notebooks/deprecate/: predictor_example_xyroll_mask.ipynb
utils/: checkpoint.py  image_process.py  visualize.py  yaml_loader.py
yaml/: eval_config.yaml
