[tool.poetry]
name = "3dannotatepropwizard"
version = "0.1.0"
description = "a smart labeling tool designed to help you efficiently annotate 3D volumes"
authors = ["chunhsien.yu <coffeered.yu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
torch = { version = "2.1.0+cu121", source = "torch-cu121" }
numpy = "^1.26.4"
matplotlib = "^3.9.0"
opencv-python = "~4.5.5.62"
simpleitk = "^2.3.1"
scikit-image = "^0.23.2"
torchvision = { version = "~0.16.0+cu121", source = "torch-cu121" }
albumentations = "^1.4.7"
gdown = "^5.2.0"
click = "^8.1.7"
tqdm = "^4.66.4"
glob2 = "^0.7"
omegaconf = { version = "^2.3.0", optional = true }


[tool.poetry.extras]
cutie = ["omegaconf"]

[[tool.poetry.source]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ipython = "^8.24.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.venv
    | SAM-Med2D
    | segment_anything
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = ["SAM-Med2D", "segment_anything", ".venv"]
