[tool.poetry]
name = "annotatepropwizard3d"
version = "0.1.0"
description = "a smart labeling tool designed to help you efficiently annotate 3D volumes"
authors = ["chunhsien.yu <coffeered.yu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
torch = "^2.4.0"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
opencv-python = "~4.5.5.62"
simpleitk = "^2.3.1"
scikit-image = "^0.23.2"
torchvision = "^0.19.0"
albumentations = "^1.4.7"
gdown = "^5.2.0"
click = "^8.1.7"
tqdm = "^4.66.4"
glob2 = "^0.7"
omegaconf = "^2.3.0"
torchaudio = "^2.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ipython = "^8.24.0"
ipykernel = "^6.29.4"
flake8 = "^7.1.0"
flake8-pyproject = "^1.2.3"
pre-commit = "^3.7.1"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.venv
    | annotatepropwizard3d/submodules
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = ["annotatepropwizard3d/submodules", ".venv"]

[tool.flake8]
count = true
max-line-length = 100
statistics = true
exclude = [".git", ".venv", ".vscode", "submodules", "deprecated"]

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = "tests"
